@@ -1,3 +1,10 @@
+2014-02-17  Seb Viret  <viret@in2p3.fr>
+ 
+       	* Some modifs in the StubExtractor package (can pass the container names as option)
+	For more flexibility
+
+	This version has been tested against CMSSW_6_2_0_SLHC7
+
 2014-02-13  Seb Viret  <viret@in2p3.fr>
  
        	* Lot of modifs in the official stub stream (in particular for occupancies studies). 
